# flet-splash

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/color_splash/: main.py  pyproject.toml
examples/custom_splash/: custom_splash.dart  main.py  pyproject.toml
examples/image_splash/: main.py  pyproject.toml
examples/lottie_splash/: main.py  pyproject.toml
examples/lottie_splash/assets/: custom_splash.json
examples/svg_splash/: main.py  pyproject.toml
src/flet_splash/: __main__.py  build.py  config.py  inject.py  main.py  templates.py  ui.py
tests/: test_build.py  test_config.py  test_inject.py  test_templates.py
