[project]
name = "image-splash-example"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["flet>=0.82.0"]

[tool.flet]
product = "Image Splash"

[tool.flet.splash]
type = "image"
source = "assets/splash.png"
background = "#0d47a1"
dark_background = "#0a1929"
min_duration = 2.5
fade_duration = 0.5